# recast

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  deny.toml
.github/workflows/: audit.yml  bench.yml  ci.yml  docs.yml  fuzz.yml  release.yml
crates/recast/: Cargo.toml
crates/recast-core/: Cargo.toml
crates/recast-core/benches/: engine.rs
crates/recast-core/proptest-regressions/: proptests.txt
crates/recast-core/src/: commit.rs  commit_tests.rs  error.rs  json.rs  json_tests.rs  lib.rs  lockfile.rs  lockfile_tests.rs  parallel.rs  parallel_tests.rs  pattern.rs  pattern_tests.rs  plan.rs  plan_tests.rs  proptests.rs  rewrite.rs  rewrite_tests.rs  script.rs  script_tests.rs  search.rs  search_tests.rs  structural.rs  structural_tests.rs  template_scan.rs  walker.rs  walker_tests.rs
crates/recast-core/src/snapshots/: recast_core__json__tests__apply_json_already_applied.snap  recast_core__json__tests__apply_json_with_changes.snap  recast_core__json__tests__check_json_already_applied.snap  recast_core__json__tests__check_json_would_change.snap  recast_core__json__tests__error_json_file_too_large.snap  recast_core__json__tests__error_json_non_convergent.snap  recast_core__json__tests__error_json_syntax_regression.snap  recast_core__json__tests__error_json_too_few_matches.snap  recast_core__json__tests__error_json_too_many_files.snap  recast_core__json__tests__error_json_too_many_matches.snap  recast_core__json__tests__plan_json_already_applied.snap  recast_core__json__tests__plan_json_with_changes.snap  recast_core__json__tests__search_json_empty.snap  recast_core__json__tests__search_json_shape.snap  recast_core__json__tests__search_json_tests__search_json_empty.snap  recast_core__json__tests__search_json_tests__search_json_shape.snap  recast_core__rewrite__tests__diff_snapshot_added_lines_only.snap  recast_core__rewrite__tests__diff_snapshot_multi_hunk.snap  recast_core__rewrite__tests__diff_snapshot_no_trailing_newline.snap  recast_core__rewrite__tests__diff_snapshot_single_line_change.snap
crates/recast-core/tests/: end_to_end.rs
crates/recast-mcp/: Cargo.toml  README.md
crates/recast-mcp/src/: main.rs  server.rs  server_tests.rs
crates/recast/src/: completion.rs  completion_tests.rs  main.rs
crates/recast/tests/: cli.rs  concurrency.rs
dev/bench/: data.js
docs/: book.toml
docs/plans/: syntax-regression-guard.md
docs/src/: SUMMARY.md  agent-rules.md  building.md  cargo-features.md  cli-reference.md  exit-codes.md  first-rewrite.md  install.md  intro.md  json-schema.md  operating-manual.md  regex-mode.md  safety.md  script-mode.md  structural-mode.md
docs/superpowers/plans/: 2026-05-31-search-mode.md
docs/superpowers/specs/: 2026-05-31-search-mode-design.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compile_friendly_query.rs  pattern_compile_convergence.rs  structural_rewrite_friendly.rs
