[workspace]
resolver = "3"
members = [
    "crates/recast",
    "crates/recast-core",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["recast contributors"]
version = "0.1.2"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
regex = "1"
ignore = "0.4"
globset = "0.4"
similar = "2"
tempfile = "3"
rayon = "1"
rhai = { version = "1", default-features = false, features = ["std", "no_custom_syntax", "no_module"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = "1"
assert_cmd = "2"
predicates = "3"

recast-core = { path = "crates/recast-core", version = "=0.1.2" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
