[package]
name = "recast-core"
description = "recast core: pattern compilation, file walking, rewrite engine, atomic commit."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
regex.workspace = true
ignore.workspace = true
globset.workspace = true
similar.workspace = true
tempfile.workspace = true
rustix.workspace = true
rayon.workspace = true
rhai = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
script = ["dep:rhai"]

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true

[lints]
workspace = true
