[package]
name = "recast-core"
description = "recast core: pattern compilation, file walking, rewrite engine, atomic commit."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
regex.workspace = true
ignore.workspace = true
globset.workspace = true
similar.workspace = true
tempfile.workspace = true
rayon.workspace = true
rhai = { workspace = true, optional = true }
thiserror.workspace = true
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tracing.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
script = ["dep:rhai"]
# Structural mode requires at least one `lang-*` feature. Enable
# `lang-all` to pull in every grammar shipped today, or pick the ones
# you actually need to keep the binary small.
lang-rust = ["dep:tree-sitter", "dep:tree-sitter-rust"]
lang-ts = ["dep:tree-sitter", "dep:tree-sitter-typescript"]
lang-js = ["dep:tree-sitter", "dep:tree-sitter-javascript"]
lang-python = ["dep:tree-sitter", "dep:tree-sitter-python"]
lang-all = ["lang-rust", "lang-ts", "lang-js", "lang-python"]

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
proptest.workspace = true

[lints]
workspace = true
