[package]
name = "recast-core"
description = "Engine behind the recast CLI: regex / Rhai script / tree-sitter rewrites, atomic two-phase commit, schema-locked JSON output."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["rewrite", "refactor", "regex", "tree-sitter", "ast"]
categories = ["development-tools", "text-processing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
regex.workspace = true
ignore.workspace = true
globset.workspace = true
similar.workspace = true
tempfile.workspace = true
rayon.workspace = true
fs2.workspace = true
rhai = { workspace = true, optional = true }
thiserror.workspace = true
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-bash = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-md = { workspace = true, optional = true }
tracing.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
script = ["dep:rhai"]
# Structural mode requires at least one `lang-*` feature. Enable
# `lang-all` to pull in every grammar shipped today, or pick the ones
# you actually need to keep the binary small.
lang-rust = ["dep:tree-sitter", "dep:tree-sitter-rust"]
lang-ts = ["dep:tree-sitter", "dep:tree-sitter-typescript"]
lang-js = ["dep:tree-sitter", "dep:tree-sitter-javascript"]
lang-python = ["dep:tree-sitter", "dep:tree-sitter-python"]
lang-bash = ["dep:tree-sitter", "dep:tree-sitter-bash"]
lang-go = ["dep:tree-sitter", "dep:tree-sitter-go"]
lang-json = ["dep:tree-sitter", "dep:tree-sitter-json"]
lang-md = ["dep:tree-sitter", "dep:tree-sitter-md"]
lang-all = [
    "lang-rust",
    "lang-ts",
    "lang-js",
    "lang-python",
    "lang-bash",
    "lang-go",
    "lang-json",
    "lang-md",
]

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "engine"
harness = false
required-features = ["lang-rust", "script"]

[lints]
workspace = true
