[package]
name = "recast-mcp"
description = "Model Context Protocol server for recast — exposes safe, atomic, multi-file rewrites to MCP-aware AI agents (Claude Desktop, Cursor, Continue, ...). Same engine as recast-cli, no subprocess."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["mcp", "agent", "refactor", "rewrite", "ai"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[[bin]]
name = "recast-mcp"
path = "src/main.rs"

[dependencies]
recast-core = { workspace = true, features = ["serde", "script", "lang-all"] }
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-io", "schemars"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "signal"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
