[package]
name = "recast-cli"
description = "Safe, atomic, transparent multi-file text rewrites — regex / Rhai script / tree-sitter modes, two-phase commit with rollback, agent-friendly JSON output."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["cli", "refactor", "rewrite", "regex", "ast"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[[bin]]
name = "recast"
path = "src/main.rs"

[dependencies]
recast-core = { workspace = true, features = ["serde"] }
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[features]
default = ["script", "lang-all"]
script = ["recast-core/script"]
lang-rust = ["recast-core/lang-rust"]
lang-ts = ["recast-core/lang-ts"]
lang-js = ["recast-core/lang-js"]
lang-python = ["recast-core/lang-python"]
lang-bash = ["recast-core/lang-bash"]
lang-go = ["recast-core/lang-go"]
lang-json = ["recast-core/lang-json"]
lang-md = ["recast-core/lang-md"]
lang-all = [
    "lang-rust",
    "lang-ts",
    "lang-js",
    "lang-python",
    "lang-bash",
    "lang-go",
    "lang-json",
    "lang-md",
]

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
fs2.workspace = true

[lints]
workspace = true
